# statty

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  diesel.toml
crates/api/: Cargo.toml
crates/api/src/: charge_service.rs  lib.rs  statistics.rs  vehicle_service.rs
crates/common/: Cargo.toml
crates/common/src/: context.rs  date_format.rs  http_utils.rs  lib.rs  period.rs
crates/common/src/auth/: auth.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  error.rs
crates/db/: Cargo.toml
crates/db/src/: db_conn.rs  lib.rs  util.rs
crates/domain/: Cargo.toml
crates/domain/src/: charge_session.rs  lib.rs  meta.rs  schema.rs  stats.rs  user.rs  vehicle.rs
crates/domain/src/dto/: error.rs
crates/influxdb/: Cargo.toml
crates/routes/: Cargo.toml
crates/routes/src/: routes.rs
frontend/statty/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/statty/src/: App.vue  main.js
frontend/statty/src/api/: http.js  sessionApi.js  statsApi.js
frontend/statty/src/components/: Footer.vue  Header.vue  SessionList.vue  SessionModal.vue  Statistics.vue  ThemeToggle.vue  VehicleSelect.vue
frontend/statty/src/router/: routes.js
frontend/statty/src/util/: darkmode.js
frontend/statty/src/views/: Home.vue  Login.vue
migrations/2023-07-18-193155_track_ev_consumption/: down.sql  up.sql
migrations/2023-08-30-075734_add_user_management/: down.sql  up.sql
src/: main.rs
ui/statty-ui/: .gitignore  Cargo.toml
ui/statty-ui/src/: main.rs  route.rs
