[workspace.package]
version = "0.0.1"
edition = "2021"
description = "A data processor and visualizer"
license = "Apache-2.0"
repository = "https://github.com/Yunzlez/statty"

[package]
name = "statty"
version.workspace =  true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/routes",
    "crates/domain"
]

[workspace.dependencies]
statty_routes = { version = "=0.0.1", path = "./crates/routes"}
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }

[dependencies]
statty_routes = { workspace = true }
actix-web = { workspace = true }
