[workspace.package]
version = "0.0.1"
edition = "2021"
description = "A data processor and visualizer"
license = "Apache-2.0"
repository = "https://github.com/Yunzlez/statty"

[package]
name = "statty"
version.workspace =  true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/routes",
    "crates/domain",
    "crates/common"
]
exclude = [
    "ui/statty-ui"
]

[workspace.dependencies]
statty_routes = { version = "=0.0.1", path = "./crates/routes"}
statty_domain = { version = "=0.0.1", path = "./crates/domain"}
statty_db = { version = "=0.0.1", path = "./crates/db"}
statty_api = { version = "=0.0.1", path = "./crates/api"}
statty_common = { version = "=0.0.1", path = "./crates/common"}
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.1", features = ["chrono"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde"]}
chrono = { version = "0.4", features = ["serde"]}
env_logger = "0.10.0"
regex = "1.9"
lazy_static = "1.4"
nom = "7.1"

[dependencies]
statty_routes = { workspace = true }
statty_common = { workspace = true }
statty_db = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
