[package]
name = "statty_common"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "statty_common"
path = "src/lib.rs"
doctest = false

[dependencies]
diesel = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
nom = { workspace = true }
