[package]
name = "statty_common"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "statty_common"
path = "src/lib.rs"
doctest = false

[dependencies]
statty_domain = { workspace = true }
statty_db = { workspace = true }
diesel = { workspace = true }
oxide-auth = { workspace = true }
oxide-auth-actix= { workspace = true }
actix = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
nom = { workspace = true }
log = { workspace = true }
password-hash = { workspace = true }
argon2 = { workspace = true }
