[package]
name = "statty_db"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "statty_db"
path = "src/lib.rs"
doctest = false

[dependencies]
diesel = { workspace = true }
dotenvy = { workspace = true }
