[package]
name = "statty_domain"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "statty_domain"
path = "src/lib.rs"
doctest = false

[dependencies]
diesel = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
