[package]
name = "statty_routes"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "statty_routes"
path = "src/lib.rs"
doctest = false


[dependencies]
statty_api = { workspace = true }
statty_common = { workspace = true }
actix-web = { workspace = true }